[project]
name = "langchain-pangea"
version = "0.1.6"
description = "LangChain integrations for Pangea"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Pangea", email = "support@pangea.cloud" }
]
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=0.3.76",
    "pangea-sdk>=6.7.0",
    "pydantic>=2.11.9",
    "typing-extensions>=4.15.0",
]

[project.urls]
"Source Code" = "https://github.com/pangeacyber/langchain-pangea"
"Release Notes" = "https://github.com/pangeacyber/langchain-pangea/releases"

[dependency-groups]
dev = [
    "langchain-tests==0.3.21",
    "mypy==1.18.2",
    "pytest==8.4.2",
    "ruff==0.13.2",
]

[build-system]
requires = ["pdm-backend==2.4.5"]
build-backend = "pdm.backend"

[tool.mypy]
disallow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "--tb=short"
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
filterwarnings = ["error"]
testpaths = ["tests"]
xfail_strict = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",   # isort
    "PTH", # flake8-use-pathlib
    "TC",  # flake8-type-checking
    "UP",  # pyupgrade
]
flake8-type-checking.runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "langchain_core.load.serializable.Serializable",
    "langchain_core.runnables.base.RunnableSerializable"
]
